Create settings view

--- a/src/views/group-search.scss
+++ b/src/views/group-search.scss
@@ -6,7 +6,7 @@
 
 .container__wrapper{
     width: 340px;
-    margin: 20px auto 0 auto;
+    margin: 20px auto 20px auto;
 
     &_search {
         margin-top: 20px;
