--- a/src/components/day/day.scss
+++ b/src/components/day/day.scss
@@ -5,26 +5,25 @@
   }
 
 .day__wrapper{
-    margin-left: 150px;
-    margin-top: 300px;
     width: 40px;
     height: 36px;
-    // background-color: rgb(205, 204, 230);
+    background-color: rgb(205, 204, 230);
 
     &_title{
         font-weight: 200;
         font-size: 20px;
         line-height: 24px;
         width: 40px;
-        height: 17px;
+        height: 20px;
         margin-top: -2px;
         text-align: center;
+        padding-bottom: -22px;
     }
 
     &_date{
         font-weight: 300;
         font-size: 14px;
-        margin-top: 2px;
+        margin-top: 0px;
         text-align: center;
     }
 }
