--- a/src/components/tabsBar/tabs-bar.scss
+++ b/src/components/tabsBar/tabs-bar.scss
@@ -7,39 +7,40 @@
 .bar__container{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    padding-left: 36px;
-    padding-right: 36px;
+    justify-content: space-between;
     align-items: center;
-    margin-top: -32px;
+    margin-top: -41px;
+    margin-left: 30px;
+    margin-right: 30px;
 
-    &_search{
+    &_icon{
       width: 32px;
       height: 32px;
     }
 
-    &_home{
-      width: 32px;
+    &_rectangle{
+      width: 96px;
       height: 32px;
-    }
+      background-color: #ffffff;
+      border-radius: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-    &_settings{
-      width: 32px;
-      height: 32px;
+      &_empty{
+        width: 96px;
+        height: 32px;
+        background-color: transparent;
+        border-radius: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
 }
 
 .bar__wrapper{
-  // margin-top: 300px;
+  margin-top: 300px;
   width: 400px;
 }
 
-.bar__rectangle{
-  width: 108px;
-  height: 32px;
-  background-color: #ffffff;
-  // 1 - 38px, 2 - 146px, 3 - 254px
-  margin-left: 254px;
-  margin-top: -41px;
-  border-radius: 16px;
-}
