--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,17 +1,9 @@
 * {
-    box-sizing: border-box;
-    // padding: 0;
-    // margin: 0;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
-  .calendar__wrapper{
-    margin-top: 300px;
+.calendar__container {
 
-    &_container{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        padding-left: 31px;
-        padding-right: 31px;
-    }
-  }
+}
