--- a/src/components/day/day.scss
+++ b/src/components/day/day.scss
@@ -2,28 +2,22 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
+}
 
-.day__wrapper{
+.day__wrapper {
     width: 40px;
-    height: 36px;
-    background-color: rgb(255, 255, 255);
+    margin: 0 3px;
 
     &_title{
+        color: #888888;
         font-weight: 200;
         font-size: 20px;
-        line-height: 24px;
-        width: 40px;
-        height: 20px;
-        margin-top: -2px;
         text-align: center;
-        padding-bottom: -22px;
     }
 
-    &_date{
+    &_date {
         font-weight: 300;
         font-size: 14px;
-        margin-top: 0px;
         text-align: center;
     }
 }
