--- a/src/views/groupSearchPage/group-search.scss
+++ b/src/views/groupSearchPage/group-search.scss
@@ -13,3 +13,26 @@
         margin-bottom: 20px;
     }
 }
+
+.search__container {
+    width: 340px;
+    height: 50px;
+    border: 1px solid #000000;
+    border-radius: 16px;
+
+    &_wrapper {
+        display: flex;
+        flex-direction: row;
+        padding: 8px 10px;
+
+        &_input {
+            width: 285px;
+            font-size: 18px;
+            padding-left: 2px;
+
+            &::placeholder {
+                color: red;
+            }
+        }
+    }
+}
